Fixes tests, remove use of util.xhr, small CSS update
This is a general housekeeping PR.
1. The CSS is a small layout bug I found while working on a real app.
2. The removal of util.xhr is to make when we use JSONP
   more explicit.
3. Updated the map tests to, you know, pass.

--- a/src/less/results.less
+++ b/src/less/results.less
@@ -98,6 +98,8 @@
             .label {
                 width: 100%;
                 font-size: .75em;
+                text-overflow: ellipsis;
+                white-space: nowrap;
             }
 
             .value {
